# picasort

./: .gitignore  Cargo.toml  LICENSE  README.md
Docker/: docker-compose.yml
Docker/db/: Dockerfile  init-db.sh
picasort-ai/: Cargo.toml
picasort-api/: Cargo.toml
picasort-core/: CHANGELOG.md  Cargo.toml
picasort-core/src/: error.rs  lib.rs
picasort-core/src/metadata/: basics.rs  camera.rs  descriptor.rs  exif.rs  gps.rs  mod.rs
picasort-core/src/utils/: mod.rs  sha.rs  thumbnail.rs
picasort-db/: Cargo.toml
picasort-webapp/: Cargo.toml
struct_introspec_macros/: Cargo.toml
struct_introspec_macros/src/: lib.rs
